--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>再生能源發電量月資料</title>
     <link rel="stylesheet" href="style.css?v=20230701" />
     <script src="data.js?v=20230701"></script>
 </head>
@@ -32,58 +32,80 @@
             <div>
                 <input type="checkbox" value="chkSum" id="chkSum" />
                 <label for="chkSum">發電量合計</label>
-                <input type="color" value="#434343" id="colSum" />
+                <div class="colorWrap">
+                    <input type="color" value="#434343" id="colSum" />
+                </div>
             </div>
             <div>
                 <input type="checkbox" value="chkHydra" id="chkHydra" />
                 <label for="chkHydra">慣常水力</label>
-                <input type="color" value="#4b81ec" id="colHydra" />
+                <div class="colorWrap">
+                    <input type="color" value="#4b81ec" id="colHydra" />
+                </div>
             </div>
             <div>
                 <input type="checkbox" value="chkGeo" id="chkGeo" />
                 <label for="chkGeo">地熱</label>
-                <input type="color" value="#b84a60" id="colGeo" />
+                <div class="colorWrap">
+                    <input type="color" value="#b84a60" id="colGeo" />
+                </div>
             </div>
             <div>
                 <input type="checkbox" value="chkSolar" id="chkSolar" />
                 <label for="chkSolar">太陽光電</label>
-                <input type="color" value="#e9bb52" id="colSolar" />
+                <div class="colorWrap">
+                    <input type="color" value="#e9bb52" id="colSolar" />
+                </div>
             </div>
             <div>
                 <input type="checkbox" value="chkWind" id="chkWind" />
                 <label for="chkWind">風力</label>
-                <input type="color" value="#c3c3c3" id="colWind" />
+                <div class="colorWrap">
+                    <input type="color" value="#c3c3c3" id="colWind" />
+                </div>
             </div>
 
             <div>
                 <input type="checkbox" value="chkWindLand" id="chkWindLand" />
                 <label for="chkWindLand">風力 陸域</label>
-                <input type="color" value="#d58234" id="colWindLand" />
+                <div class="colorWrap">
+                    <input type="color" value="#d58234" id="colWindLand" />
+                </div>
             </div>
             <div>
                 <input type="checkbox" value="chkWindOffShore" id="chkWindOffShore" />
                 <label for="chkWindOffShore">風力 離岸</label>
-                <input type="color" value="#7bd5ff" id="colWindOffShore" />
+                <div class="colorWrap">
+                    <input type="color" value="#7bd5ff" id="colWindOffShore" />
+                </div>
             </div>
             <div>
                 <input type="checkbox" value="chkBio" id="chkBio" />
                 <label for="chkBio">生質能</label>
-                <input type="color" value="#b98cc3" id="colBio" />
+                <div class="colorWrap">
+                    <input type="color" value="#b98cc3" id="colBio" />
+                </div>
             </div>
             <div>
                 <input type="checkbox" value="chkBioSolid" id="chkBioSolid" />
                 <label for="chkBioSolid">生質能 固態</label>
-                <input type="color" value="#503ca0" id="colWind" />
+                <div class="colorWrap">
+                    <input type="color" value="#503ca0" id="colBioSolid" />
+                </div>
             </div>
             <div>
                 <input type="checkbox" value="chkBioGas" id="chkBioGas" />
                 <label for="chkBioGas">生質能 氣態</label>
-                <input type="color" value="#fff498" id="colBioGas" />
+                <div class="colorWrap">
+                    <input type="color" value="#e6da6b" id="colBioGas" />
+                </div>
             </div>
             <div>
                 <input type="checkbox" value="chkWaste" id="chkWaste" />
                 <label for="chkWaste">廢棄物</label>
-                <input type="color" value="#c7e5b3" id="colWaste" />
+                <div class="colorWrap">
+                    <input type="color" value="#c7e5b3" id="colWaste" />
+                </div>
             </div>
             <div>
                 <input type="checkbox" value="chkEvent" id="chkEvent" />
