折線圖小修
1. 加入事件鉛直線，但某些情況下懸停不會出現文字，待修
2. 顏色調整較明顯
3. 折線上加上點的懸停顯示詳細資料

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>再生能源發電量月資料</title>
-    <link rel="stylesheet" href="style.css?v=20230707" />
-    <script src="data.js?v=20230707"></script>
+    <link rel="stylesheet" href="style.css?v=20230709" />
+    <script src="data.js?v=20230709"></script>
 </head>
 <body>
     <div id="divTitle">
@@ -24,7 +24,7 @@
             <div>資料時間：<span id="spanRange"></span></div>
             <div>資料來源：<a href="https://data.gov.tw/dataset/160060" target="_blank">政府資料開放平台</a></div>
             <div>圖表製作：cyberlancer</div>
-            <div>更新時間：2023年07月01日</div>
+            <div>網站更新：2023年07月09日</div>
         </div>
     </div>
     <div id="divMain">
@@ -61,7 +61,7 @@
                 <input type="checkbox" value="chkWind" id="chkWind" />
                 <label for="chkWind">風力</label>
                 <div class="colorWrap">
-                    <input type="color" value="#c3c3c3" id="colWind" />
+                    <input type="color" value="#b3b3b3" id="colWind" />
                 </div>
             </div>
 
@@ -104,7 +104,7 @@
                 <input type="checkbox" value="chkWaste" id="chkWaste" />
                 <label for="chkWaste">廢棄物</label>
                 <div class="colorWrap">
-                    <input type="color" value="#c7e5b3" id="colWaste" />
+                    <input type="color" value="#93c671" id="colWaste" />
                 </div>
             </div>
             <div>
